Moved the install-exec-hook where it belongs, and cleanup
The install hook is used to create hardlinks to the installed executable
(the ugrep+, ug and ug+ aliases are hardlinks to the main executable,
ugrep).

Cleanup means that instead of creating 4 copies of the same file, the
hook now attempts to hardlink, and only if that fails, a copy is made.
The copy is made using the $(INSTALL) program which is different for
every platfom, and contains platform specific know-how to install
programs. The old technique with 'cp -f' and 'rm -f' is not as portable
as $(INSTALL)

This hook belongs in the same Makefile where ugrep is built, not at the
root Makefile, so it's moved there.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,8 +30,23 @@ noinst_HEADERS = \
         zstream.hpp \
         zopen.h
 
+# Try installing hardlinks on filesystems that support it, otherwise
+# install stripped copies using the install program
 install-exec-hook:
-	$(INSTALL) -s -t $(DESTDIR)$(bindir) ugrep$(EXEEXT) ug$(EXEEXT)
+	( cd $(DESTDIR)$(bindir) && \
+		ln ugrep$(EXEEXT) ugrep+$(EXEEXT) && \
+		ln ugrep$(EXEEXT) ug$(EXEEXT) && \
+		ln ugrep$(EXEEXT) ug+$(EXEEXT)) || \
+	( \
+		$(INSTALL) ugrep$(EXEEXT) "$(bindir)/ugrep+" && \
+		$(INSTALL) ugrep$(EXEEXT) "$(bindir)/ug$(EXEEXT)" && \
+		$(INSTALL) ugrep$(EXEEXT) "$(bindir)/ug+" )
+
+uninstall-hook:
+	rm -f \
+	        $(DESTDIR)$(bindir)/ug$(EXEEXT) \
+		$(DESTDIR)$(bindir)/ug+ \
+	        $(DESTDIR)$(bindir)/ugrep+
 
 # ############################################################
 #                       RE/Flex Library                      #
