Properly distribute patterns
Instead of using an unnecesary "hook" with a potentially unportable
recursive copy, this commit installs the 'patterns' set of datafiles in
the automake-prescribed form:

https://www.gnu.org/software/automake/manual/automake.html#Uniform

nobase_ means "don't strip the subdirectory names"
dist_ means "the files are distributed source files" (rather than built
      files)
data_ means "datadir" which is /usr/share/ugrep in the common Linux
distros
DATA means "copy verbatim, ie there are no build rules"

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = lib src
+SUBDIRS = lib src patterns
 
 man1_MANS = man/ugrep.1
 
@@ -27,8 +27,6 @@ install-exec-hook:
 		cd $(DESTDIR)$(bindir) && $(LN_S) ugrep$(EXEEXT) ug$(EXEEXT)
 
 install-data-hook:
-		mkdir -p $(DESTDIR)$(datadir)/ugrep && \
-		  cp -rf $(top_srcdir)/patterns $(DESTDIR)$(datadir)/ugrep/
 		cd $(DESTDIR)$(mandir)/man1; \
 		  rm -f ug.1; \
 		  $(LN_S) ugrep.1 ug.1
