Install _configured_ zsh completions
This commit removes the generated completion files from git, and
generates completions at build/install time using compgen.

The zsh completions are installed the autotools way, and the install
hook is removed, as it's unnecessary (and breaks distcheck)

CAUTION: The .DELETE_ON_ERROR GNU Make directive is required in
src/Makefile.am to delete the generated zsh completions in case
generation fails. This is a GNU-specific feature, which makes the build
somewhat unportable. It will still build on non-GNU make, but if
completion generation fails, the incomplete produced completion file
will be installed, if "make install" is run again after the first
failure without fixing the error.

The compgen file uses bash syntax ($'...') so I changed the shebang to
require bash instead of sh.

The completion rule is moved to the src directory because it depends on
src/ugrep binary, so it belongs in the same Make scope.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,16 @@ CLEANFILES += $(fishcompletion_DATA)
 endif
 
 
+if ENABLE_ZSH_COMPLETION
+zshcompletiondir = $(ZSH_COMPLETION_DIR)
+zshcompletion_DATA = \
+	_ugrep \
+	_ug \
+	_ugrep+ \
+	_ug+
+CLEANFILES += $(zshcompletion_DATA)
+endif
+
 # This is a GNU-make feature
 .DELETE_ON_ERROR:
 
@@ -28,3 +38,8 @@ dist_noinst_SCRIPTS += $(top_srcdir)/completions/fish/compgen
 $(fishcompletion_DATA): ugrep
 	target=$@ ; cmdname=$${target##*/} ; cmdname=$${cmdname%%.fish} ; \
 	$(top_srcdir)/completions/fish/compgen ./$< $$cmdname > $@
+
+dist_noinst_SCRIPTS += $(top_srcdir)/completions/zsh/compgen
+$(zshcompletion_DATA): ugrep
+	target=$@ ; cmdname=$${target##*/_} ; \
+	$(top_srcdir)/completions/zsh/compgen ./$< $$cmdname > $@
